--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -45,6 +45,9 @@
 				padding: var(--main-padding);
 				text-align: left;
 			}
+			.rating {
+				padding: var(--main-padding);
+			}
 			.price-add {
 				padding: var(--main-padding);
 				display: flex;
