--- a/client/src/components/SingleProductReviews/SingleProductReviews.scss
+++ b/client/src/components/SingleProductReviews/SingleProductReviews.scss
@@ -41,6 +41,7 @@
 				margin-bottom: 5px;
 				img {
 					border-radius: 50%;
+					object-fit: cover;
 				}
 			}
 			.comment {
@@ -162,17 +163,17 @@
 			margin-top: 5px;
 		}
 	}
+}
 
-	.stars {
-		margin-top: 5px;
-		list-style: none;
-		display: flex;
-		align-items: center;
-		gap: 2px;
-		svg {
-			color: #ebb450;
-			font-size: 17px;
-		}
+.stars {
+	margin-top: 5px;
+	list-style: none;
+	display: flex;
+	align-items: center;
+	gap: 2px;
+	svg {
+		color: #ebb450;
+		font-size: 17px;
 	}
 }
 
