--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -43,11 +43,11 @@
 					margin: auto;
 					border: none;
 					background-color: transparent;
-					color: #000;
-					caret-color: var(--mainColor);
+					color: var(--second-text-color);
+					caret-color: var(--second-color);
 					font-size: 16px;
 					transition: 0.3s;
-					border-left: 1px solid #afafaf;
+					border-left: var(--main-border);
 
 					&::placeholder {
 						color: #afafaf;
